fixed shuffle and repeat buttons being invisible, closes #349

--- a/res/bootstrap3/gen/cherrymusic.css
+++ b/res/bootstrap3/gen/cherrymusic.css
@@ -5012,10 +5012,13 @@ td.visible-print {
 .jp-toggles {
   list-style-type: none;
   padding: 0;
-  position: relative;
+  position: absolute;
+  bottom: 4px;
+  left: 50%;
+  margin-left: 130px;
 }
 .jp-toggles li {
-  display: block;
+  display: inline-block;
 }
 .jp-controls li {
   display: inline;
