--- a/res/bootstrap3/less/jplayer.less
+++ b/res/bootstrap3/less/jplayer.less
@@ -73,10 +73,13 @@
     &-toggles{
         list-style-type: none;
         padding: 0;
-        position: relative;
+        position: absolute;
+        bottom: 4px;
+        left: 50%;
+        margin-left: 130px
     }
     &-toggles li{
-        display: block;
+        display: inline-block;
     }
 
     &-controls li{
